--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon --config nodemon.json src/app.ts"
   },
   "author": "Isailovic Jovan",
   "license": "ISC",
